force-app/main/default/objects/Contact/fields/Cura_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cura_Subscription_Start_Date__c</fullName>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>