force-app/main/default/objects/Contact/fields/cura_trial_end_date__c.field-meta.xml
<CustomField>
    <fullName>cura_trial_end_date__c</fullName>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>